[package]
name = "incr"
version = "0.1.0"
authors = ["Jonathan Strong <jonathan.strong@gmail.com>"]
description = "Simple, fast and self-contained data structures for checking whether a new value is greater than the previous maximum."
homepage = "https://github.com/jonathanstrong/incr"
repository = "https://github.com/jonathanstrong/incr"
readme = "README.md"
keywords = ["sequence", "timestamps", "event-loop", "atomic", "increment"]
license = "MIT"
license-file = "LICENSE"

[dependencies]

[features]
default = ["nightly"]
nightly = []

[profile.test]
opt-level = 3
